@@ -51,6 +51,7 @@ Bugs fixed
 * Inline math in parsed-literal is not rendered well by LaTeX (ref #3340)
 * #3308: Parsed-literals don't wrap very long lines with pdf builder (ref #3340)
 * #3295: Could not import extension sphinx.builders.linkcheck
+* #3285: autosummary: asterisks are escaped twice
 
 
 Release 1.5.1 (released Dec 13, 2016)
